--- a/HowTo_fit_filters.ipynb
+++ b/HowTo_fit_filters.ipynb
@@ -11,7 +11,7 @@
         "SuKg4zIp1DwP",
         "QQcDqSrQ3hNq"
       ],
-      "authorship_tag": "ABX9TyN8BypQhJchjM3eYKAc+WMN",
+      "authorship_tag": "ABX9TyPIW7cVKdXROYXbhoSb01L2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,31 +81,31 @@
       "metadata": {
         "id": "DMqfbZDBaFpp",
         "colab_type": "code",
+        "cellView": "both",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 156
         },
-        "cellView": "both",
-        "outputId": "684cf2e1-9f12-47c4-f5e1-850ad694484a"
+        "outputId": "dae92058-5cfe-41a0-fb87-87970c21cf67"
       },
       "source": [
         "#@title Clone the github repository \n",
         "!git clone https://github.com/Foxy1987/neuroGLM\n",
         "%cd neuroGLM\n"
       ],
-      "execution_count": 48,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'neuroGLM'...\n",
-            "remote: Enumerating objects: 134, done.\u001b[K\n",
-            "remote: Counting objects: 100% (134/134), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (93/93), done.\u001b[K\n",
-            "remote: Total 134 (delta 57), reused 100 (delta 38), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (134/134), 191.58 KiB | 3.99 MiB/s, done.\n",
-            "Resolving deltas: 100% (57/57), done.\n",
-            "/content/neuroGLM/neuroGLM/neuroGLM/neuroGLM\n"
+            "remote: Enumerating objects: 137, done.\u001b[K\n",
+            "remote: Counting objects: 100% (137/137), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (96/96), done.\u001b[K\n",
+            "remote: Total 137 (delta 58), reused 100 (delta 38), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (137/137), 232.78 KiB | 892.00 KiB/s, done.\n",
+            "Resolving deltas: 100% (58/58), done.\n",
+            "/content/neuroGLM\n"
           ],
           "name": "stdout"
         }
@@ -116,15 +116,15 @@
       "metadata": {
         "id": "oydcj47axhr-",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
         "#@title add package to google colab\n",
         "import sys, os\n",
         "sys.path.append(os.getcwd())"
       ],
-      "execution_count": 49,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -132,8 +132,8 @@
       "metadata": {
         "id": "-dF8Lr6DbQfC",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
         "#@title import modules\n",
@@ -144,7 +144,7 @@
         "from scipy.optimize import minimize\n",
         "from glmtools.fit import neg_log_lik"
       ],
-      "execution_count": 50,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -191,7 +191,7 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -226,7 +226,7 @@
       "source": [
         "stim, sptimes = io.load_spk_times('datasets/stim.txt', 'datasets/spTimesPNControl/pn1SpTimes_reverseChirp.mat', 5, 30)"
       ],
-      "execution_count": 53,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -238,12 +238,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "2635516c-e9be-4bbd-a4c2-663360a84fcb"
+        "outputId": "deec1850-ac51-42a9-cfb0-a0a8fc6708f7"
       },
       "source": [
         "!ls datasets/"
       ],
-      "execution_count": 52,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,14 +276,14 @@
         "trials = len(sptimes)\n",
         "duration = 25\n",
         "nt = len(stim)\n",
-        "t = (np.arange(nt))*dt\n",
         "stim = (stim / np.max(stim))*0.01\n",
         "dt = 0.001                                # 1 ms time bins = 1 KHz sample frequency\n",
+        "t = (np.arange(nt))*dt\n",
         "sp_count_fun = lambda x: np.histogram(x, np.arange(0.5, len(stim)+1) * dt - dt)[0] \n",
         "sps = list(map(sp_count_fun, sptimes))    # apply the binning function sp_count_fun to each trial\n",
         "stim_ = np.tile(stim, (trials, 1))        # we need a stim for every trial\n"
       ],
-      "execution_count": 54,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -314,7 +314,7 @@
         "# register internal sptrain regressor\n",
         "expt.register_spike_train('sptrain')"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -351,7 +351,7 @@
         "ax2.eventplot(sps_.T, colors='k', linewidth=0.5)\n",
         "\n"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +412,7 @@
         "# register internal sptrain regressor\n",
         "expt.register_spike_train('sptrain')"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -441,7 +441,7 @@
         "dspec.addRegressorContinuous()\n",
         "dspec.addRegressorSpTrain()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +469,7 @@
       "source": [
         "dm, X, y = dspec.compileDesignMatrixFromTrialIndices()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,7 +563,7 @@
         "\n",
         "theta_ml = res['x']"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +615,7 @@
         "\n",
         "print(\"DC bias term is {} spikes/s\".format(dc))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -659,7 +659,7 @@
         "ax2.set_xlabel('Time before spike (s)')\n",
         "plt.show()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
