--- a/HowTo_fit_filters.ipynb
+++ b/HowTo_fit_filters.ipynb
@@ -11,7 +11,7 @@
         "SuKg4zIp1DwP",
         "QQcDqSrQ3hNq"
       ],
-      "authorship_tag": "ABX9TyPIW7cVKdXROYXbhoSb01L2",
+      "authorship_tag": "ABX9TyOf9xjMLwSZ3XQLJ46p/qjb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,26 +86,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 156
         },
-        "outputId": "dae92058-5cfe-41a0-fb87-87970c21cf67"
+        "outputId": "684cf2e1-9f12-47c4-f5e1-850ad694484a"
       },
       "source": [
         "#@title Clone the github repository \n",
         "!git clone https://github.com/Foxy1987/neuroGLM\n",
         "%cd neuroGLM\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'neuroGLM'...\n",
-            "remote: Enumerating objects: 137, done.\u001b[K\n",
-            "remote: Counting objects: 100% (137/137), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (96/96), done.\u001b[K\n",
-            "remote: Total 137 (delta 58), reused 100 (delta 38), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (137/137), 232.78 KiB | 892.00 KiB/s, done.\n",
-            "Resolving deltas: 100% (58/58), done.\n",
-            "/content/neuroGLM\n"
+            "remote: Enumerating objects: 134, done.\u001b[K\n",
+            "remote: Counting objects: 100% (134/134), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (93/93), done.\u001b[K\n",
+            "remote: Total 134 (delta 57), reused 100 (delta 38), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (134/134), 191.58 KiB | 3.99 MiB/s, done.\n",
+            "Resolving deltas: 100% (57/57), done.\n",
+            "/content/neuroGLM/neuroGLM/neuroGLM/neuroGLM\n"
           ],
           "name": "stdout"
         }
@@ -124,7 +124,7 @@
         "import sys, os\n",
         "sys.path.append(os.getcwd())"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
         "from scipy.optimize import minimize\n",
         "from glmtools.fit import neg_log_lik"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
       "source": [
         "stim, sptimes = io.load_spk_times('datasets/stim.txt', 'datasets/spTimesPNControl/pn1SpTimes_reverseChirp.mat', 5, 30)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,12 +238,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "deec1850-ac51-42a9-cfb0-a0a8fc6708f7"
+        "outputId": "2635516c-e9be-4bbd-a4c2-663360a84fcb"
       },
       "source": [
         "!ls datasets/"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,12 +278,11 @@
         "nt = len(stim)\n",
         "stim = (stim / np.max(stim))*0.01\n",
         "dt = 0.001                                # 1 ms time bins = 1 KHz sample frequency\n",
-        "t = (np.arange(nt))*dt\n",
         "sp_count_fun = lambda x: np.histogram(x, np.arange(0.5, len(stim)+1) * dt - dt)[0] \n",
         "sps = list(map(sp_count_fun, sptimes))    # apply the binning function sp_count_fun to each trial\n",
         "stim_ = np.tile(stim, (trials, 1))        # we need a stim for every trial\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,6 +345,7 @@
         "\tsps_[:, i] = actual_[i].T\n",
         "\n",
         "# Share a X axis with each column of subplots\n",
+        "t = (np.arange(nt))*dt\n",
         "fig, (ax1, ax2) = plt.subplots(2, 1, sharex='col')\n",
         "ax1.plot(t, stim)\n",
         "ax2.eventplot(sps_.T, colors='k', linewidth=0.5)\n",
