--- a/fitting_spike_train_tutorial.ipynb
+++ b/fitting_spike_train_tutorial.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "fitting_spike_train_tutorial.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN08v8BF77g3oyjAgIGeaDp",
+      "authorship_tag": "ABX9TyPE1I9nc96dca3gjhJzeclI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
         "!git clone https://github.com/davidfox87/neuro_encoding_models &> /dev/null\n",
         "%cd neuro_encoding_models/"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +71,7 @@
         "import sys, os\n",
         "sys.path.append(os.getcwd())"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
         "from glmtools.fit import neg_log_lik, mapfit_GLM\n",
         "from utils.read import load_spk_times2"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
         "\treturn DesignSpec(expt, np.arange(stim.shape[1]))\n",
         " "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
         "stim, sps = load_spk_times2('datasets/stim.txt', response)\n",
         "dt = 0.001"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -257,7 +257,7 @@
         "ax[1].set_title('Spike rasters from 5 trials')\n",
         "ax[1].set_xlabel('Time (s)')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +296,7 @@
         "scaler = MinMaxScaler()\n",
         "stim = scaler.fit_transform(stim)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,7 +324,7 @@
         "ax[0].plot(stim_basis.B)\n",
         "ax[1].plot(spike_basis.B)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,7 +419,7 @@
         "  folds_ytest.append(y_test)\n",
         ";"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +587,7 @@
         "cbarx = f.colorbar(imx, cax=caxx)\n",
         "cbarx.set_ticklabels(np.sort(np.unique(X_train)))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,6 +618,17 @@
       },
       "source": [
         "# Train the model (find regression weights) with Cross-validation\n",
+        "Given a dataset the goal of ridge regression is to learn a linear function of the features in our design matrix. For info on how Ridge regression avoids overfitting, see https://towardsdatascience.com/ridge-regression-for-better-usage-2f19b3a202db\n",
+        "\n",
+        "Cross-validation is used to find the value of the ridge penalty that minimizes a given metric across different types of splits of the trial data. This model would generalize to each trial equally well as opposed to overfitting on a single trial.\n",
+        "\n",
+        "For a more detailed explanation of leave-one-out cross-validation, see https://machinelearningmastery.com/loocv-for-evaluating-machine-learning-algorithms/\n",
+        "\n",
+        "Generally, leave-one-out cross-validation\n",
+        "\n",
+        "The cross-validation has a single parameter “k” that controls the number of subsets that a dataset is split into. In leave-one-out, k = 5 = the number of trials in our experiment. Once split, each subset is given the opportunity to be used as a test set while all other subsets together are used as a training dataset.\n",
+        "\n",
+        "This means that k-fold cross-validation involves fitting and evaluating k models. This, in turn, provides k estimates of a model’s performance on the dataset, which can be reported using summary statistics such as the mean and standard deviation. This score can then be used to compare and ultimately select a model and configuration to use as the “final model” for a dataset.\n",
         "\n",
         "<figure>\n",
         "<center>\n",
@@ -731,7 +742,7 @@
         "ax[1].set_xlim(0.001, 1)\n",
         "ax[0].set_xlim(-2, 0)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,7 +823,7 @@
         "  glm_sptimes[:, i] = sps * np.arange(len(sps)) * dt\n",
         "  glm_sims[:, i] = sps\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -858,7 +869,7 @@
         "\n",
         "ax[2].legend()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
