--- a/fitting_temporal_filter_models_to_behavior_data.ipynb
+++ b/fitting_temporal_filter_models_to_behavior_data.ipynb
@@ -6,7 +6,7 @@
       "name": "fitting_temporal_filter_models_to_behavior_data.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN1OLJoLbD9Ufmrr/lVItCG",
+      "authorship_tag": "ABX9TyMD46jxY48tz+xoIhzTfOln",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -170,7 +170,7 @@
         "\n",
         " "
       ],
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,7 +239,7 @@
         "ax[1].set_title('Ground Speed response')\n",
         "plt.tight_layout()"
       ],
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -283,7 +283,7 @@
         "# make test dspec\n",
         "test_dspec = make_dspec(stim_test, resp_test, dt)"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -344,7 +344,7 @@
         "ax.set_ylabel('Weight')\n",
         "ax.set_title('Raised Cosine basis')"
       ],
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,7 +484,16 @@
         "id": "kOZt_djlfBQb"
       },
       "source": [
-        "# Now perform cross-validation to find the ridge penalty that gives the best average mse across validation folds"
+        "# Now perform cross-validation to find the ridge penalty that gives the best average mse across validation folds\n",
+        "An explanation of Ordinary Least Squares can be found here:\n",
+        "\n",
+        "https://web.stanford.edu/~mrosenfe/soc_meth_proj3/matrix_OLS_NYU_notes.pdf\n",
+        "\n",
+        "Ridge regression is an extension of Ordinary Least Squares and is used to prevent overfitting to specific data:\n",
+        "\n",
+        "https://towardsdatascience.com/ridge-regression-for-better-usage-2f19b3a202db\n",
+        "\n",
+        "To find the ridge penalty, we use a time series version of K-fold cross-validation."
       ]
     },
     {
