--- a/fitting_spike_train_tutorial.ipynb
+++ b/fitting_spike_train_tutorial.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "fitting_spike_train_tutorial.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOCCavb+JEScg7kPBtbggVQ",
+      "authorship_tag": "ABX9TyM5ovyHhefRbUGzqeQf6KYM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1264,7 +1264,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "3h_uKWZZeayo",
-        "outputId": "e3132006-d1cd-4040-f26e-7fdf66a7d6d0",
+        "outputId": "1cac36a0-98cd-4c50-ce82-ab3e2fc5fa12",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
@@ -1276,16 +1276,16 @@
         "\n",
         "mse = mean_squared_error(psth_exp_, psth_model_)\n",
         "\n",
-        "print('The r2 on the held-out test set is {}'.format(r2))\n",
-        "print('The mse on the held-out test set is {}'.format(mse))"
+        "print('The r2 is {}'.format(r2))\n",
+        "print('The rmse is {}'.format(np.sqrt(mse)))"
       ],
-      "execution_count": 87,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The r2 on the held-out test set is 0.807735325432692\n",
-            "The mse on the held-out test set is 70.3268907217292\n"
+            "The r2 is 0.807735325432692\n",
+            "The rmse is 8.386112968576633\n"
           ],
           "name": "stdout"
         },
