--- a/filter_summary.ipynb
+++ b/filter_summary.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "filter_summary.ipynb",
+      "name": "filter_summary",
       "provenance": [],
-      "authorship_tag": "ABX9TyPm4uPjuORiVhDQ9UaOD3Qu",
+      "authorship_tag": "ABX9TyPUxgGogKyfvvTzCsFiPT/0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "#@title Clone the github repository \n",
         "!git clone https://github.com/davidfox87/neuro_encoding_models"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +78,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive', force_remount=True)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +101,7 @@
       "source": [
         "%cd neuro_encoding_models/"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +122,7 @@
         "import sys, os\n",
         "sys.path.append(os.getcwd())"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
         "import matplotlib.gridspec as gridspec\n",
         "import pickle\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -173,9 +173,11 @@
         "tpn = np.arange(len(pn1_out['response'])) * dt\n",
         "\n",
         "pkl_file = open('/content/drive/MyDrive/temporal_filter_data_files_for_colab/basis.pkl', 'rb')\n",
-        "basis = pickle.load(pkl_file)"
+        "basis = pickle.load(pkl_file)\n",
+        "\n",
+        "pn1_out['']"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -189,7 +191,7 @@
         "\n",
         "plt.rc('font', **font)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -264,7 +266,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
