--- a/filter_summary.ipynb
+++ b/filter_summary.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "filter_summary",
       "provenance": [],
-      "authorship_tag": "ABX9TyPUxgGogKyfvvTzCsFiPT/0",
+      "authorship_tag": "ABX9TyMKWAlGkvG26OcAohTqpQn5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,24 +42,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LYg1CGer58Mn",
-        "outputId": "730d29fa-71c5-467b-8084-be531bed7e54"
+        "outputId": "9bd0962b-3510-4364-b940-d5aed6f2313e"
       },
       "source": [
         "#@title Clone the github repository \n",
         "!git clone https://github.com/davidfox87/neuro_encoding_models"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'neuro_encoding_models'...\n",
-            "remote: Enumerating objects: 17, done.\u001b[K\n",
-            "remote: Counting objects: 100% (17/17), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (14/14), done.\u001b[K\n",
-            "remote: Total 615 (delta 6), reused 7 (delta 3), pack-reused 598\u001b[K\n",
-            "Receiving objects: 100% (615/615), 82.60 MiB | 9.39 MiB/s, done.\n",
-            "Resolving deltas: 100% (352/352), done.\n"
+            "remote: Enumerating objects: 61, done.\u001b[K\n",
+            "remote: Counting objects: 100% (61/61), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (51/51), done.\u001b[K\n",
+            "remote: Total 659 (delta 28), reused 20 (delta 10), pack-reused 598\u001b[K\n",
+            "Receiving objects: 100% (659/659), 84.59 MiB | 41.52 MiB/s, done.\n",
+            "Resolving deltas: 100% (374/374), done.\n"
           ],
           "name": "stdout"
         }
@@ -72,13 +72,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RvG4E7xY7ptO",
-        "outputId": "79d93d0b-edc9-4d49-e283-4a793cdea2a6"
+        "outputId": "ab5fa76e-d6e1-4741-957e-836bd9657240"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive', force_remount=True)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,12 +96,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zWS258kv7uuu",
-        "outputId": "c931175f-18a4-4aca-8e8e-5f5ba3b81ea0"
+        "outputId": "a1cd36c5-f422-410b-e364-d6dcd9eeedba"
       },
       "source": [
         "%cd neuro_encoding_models/"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +122,7 @@
         "import sys, os\n",
         "sys.path.append(os.getcwd())"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
         "import matplotlib.gridspec as gridspec\n",
         "import pickle\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -175,9 +175,21 @@
         "pkl_file = open('/content/drive/MyDrive/temporal_filter_data_files_for_colab/basis.pkl', 'rb')\n",
         "basis = pickle.load(pkl_file)\n",
         "\n",
-        "pn1_out['']"
+        "pkl_file = open('/content/drive/MyDrive/temporal_filter_data_files_for_colab/average_neural_data.pkl', 'rb')\n",
+        "average_neural_data = pickle.load(pkl_file)\n",
+        "\n",
+        "orn_mu = average_neural_data['mean_orn_stim_filter']\n",
+        "orn_mu2 = average_neural_data['mean_orn_postspike_filter']\n",
+        "orn_predictions_mu = average_neural_data['mean_orn_psth_prediction']\n",
+        "orn_exp_responses_mu = average_neural_data['mean_orn_psth_experiment']\n",
+        "pn_mu = average_neural_data['mean_pn_stim_filter']\n",
+        "pn_mu2 = average_neural_data['mean_pn_postspike_filter']\n",
+        "pn_predictions_mu = average_neural_data['mean_pn_psth_prediction']\n",
+        "orn_exp_responses_mu = average_neural_data['mean_pn_psth_experiment']\n",
+        "orn_basis_weights = average_neural_data['orn_basis_weights']\n",
+        "pn_basis_weights = average_neural_data['pn_basis_weights']"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -191,7 +203,7 @@
         "\n",
         "plt.rc('font', **font)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -205,66 +217,43 @@
         "outputId": "c0d854b0-82aa-4164-baaa-f71b1a1b3009"
       },
       "source": [
-        "fig = plt.figure(constrained_layout=True, figsize=[20, 10])\n",
-        "spec2 = gridspec.GridSpec(ncols=5, nrows=6, figure=fig)\n",
+        "fig = plt.figure(figsize=[20, 10])\n",
+        "ax1 = plt.subplot2grid((2, 4), (0, 0))\n",
+        "ax2 = plt.subplot2grid((2, 4), (0, 1))\n",
+        "ax3 = plt.subplot2grid((2, 4), (0, 2), colspan=2)\n",
         "\n",
-        "f_ax0_1 = fig.add_subplot(spec2[0, :2])\n",
-        "f_ax0_2 = fig.add_subplot(spec2[0, 2:])\n",
-        "f_ax0_1.plot(pn1_out['k'][0], pn1_out['k'][1])\n",
-        "f_ax0_1.axhline(0, color=\".2\", linestyle=\"--\", zorder=1)\n",
-        "f_ax0_2.plot(tpn, pn1_out['response'])\n",
-        "f_ax0_2.plot(tpn, pn1_out['prediction'][1])\n",
-        "f_ax0_1.set_title('PN Firing-rate')\n",
-        "f_ax0_2.set_ylabel('(Hz)')\n",
-        "\n",
-        "f_ax1_1 = fig.add_subplot(spec2[1, :2])\n",
-        "f_ax1_2 = fig.add_subplot(spec2[1, 2:])\n",
-        "f_ax1_1.plot(vmoves_out['k'][0], vmoves_out['k'][1])\n",
-        "f_ax1_1.axhline(0, color=\".2\", linestyle=\"--\", zorder=1)\n",
-        "f_ax1_2.plot(t, vmoves_out['response'])\n",
-        "f_ax1_2.plot(t, vmoves_out['prediction'][1])\n",
-        "f_ax1_1.set_title('Ground Speed')\n",
-        "f_ax1_2.set_ylabel('(mm/s)')\n",
-        "\n",
-        "f_ax2_1 = fig.add_subplot(spec2[2, :2])\n",
-        "f_ax2_2 = fig.add_subplot(spec2[2, 2:])\n",
-        "f_ax2_1.plot(vymoves_out['k'][0], vymoves_out['k'][1])\n",
-        "f_ax2_1.axhline(0, color=\".2\", linestyle=\"--\", zorder=1)\n",
-        "f_ax2_2.plot(t, vymoves_out['response'])\n",
-        "f_ax2_2.plot(t, vymoves_out['prediction'][1])\n",
-        "f_ax2_1.set_title('Upwind Velocity')\n",
-        "f_ax2_2.set_ylabel('(mm/s)')\n",
-        "\n",
-        "f_ax3_1 = fig.add_subplot(spec2[3, :2])\n",
-        "f_ax3_2 = fig.add_subplot(spec2[3, 2:])\n",
-        "f_ax3_1.plot(angvturns_out['k'][0], angvturns_out['k'][1])\n",
-        "f_ax3_1.axhline(0, color=\".2\", linestyle=\"--\", zorder=1)\n",
-        "f_ax3_2.plot(t, angvturns_out['response'])\n",
-        "f_ax3_2.plot(t, angvturns_out['prediction'][1])\n",
-        "f_ax3_1.set_title('Angular Velocity')\n",
-        "f_ax3_2.set_xlabel('Time (s)')\n",
-        "f_ax3_2.set_ylabel('(deg/s)')\n",
-        "f_ax3_1.set_xlabel('Time lag (s)')\n",
-        "\n",
-        "f_ax4_1 = fig.add_subplot(spec2[4:, 2:])\n",
-        "f_ax4_1.plot(pn1_out['basis_center'], pn1_out['basis_weights'], '-o', label='PN')\n",
-        "f_ax4_1.plot(vmoves_out['basis_center'], vmoves_out['basis_weights'], '-o', label='Ground Speed')\n",
-        "f_ax4_1.plot(vymoves_out['basis_center'], vymoves_out['basis_weights'], '-o', label='Upwind Velocity')\n",
-        "f_ax4_1.plot(angvturns_out['basis_center'], angvturns_out['basis_weights'], '-o', label='Angular Velocity')\n",
-        "f_ax4_1.set_xscale('log')\n",
-        "f_ax4_1.legend(loc=1, prop={'size': 10})\n",
-        "f_ax4_1.set_title('Basis Vector strength')\n",
-        "f_ax4_1.set_xlabel('log(Basis vector peak Time) (s)')\n",
+        "ax4 = plt.subplot2grid((2, 4), (1, 0))\n",
+        "ax5 = plt.subplot2grid((2, 4), (1, 1))\n",
+        "ax6 = plt.subplot2grid((2, 4), (1, 2), colspan=2)\n",
         "\n",
         "\n",
-        "f_ax5_1 = fig.add_subplot(spec2[4:, :2])\n",
-        "f_ax5_1.plot(basis['basis'][0], basis['basis'][1])\n",
-        "f_ax5_1.set_title('Family of basis functions')\n",
-        "f_ax5_1.set_xlabel('Time lag (s)')\n",
+        "ax1.plot(kt, orn_mu, lw=2, label='mean population 1', color='blue')\n",
+        "ax1.fill_between(kt, orn_mu + orn_sigma, orn_mu - orn_sigma, facecolor='blue', alpha=0.5)\n",
+        "ax1.axhline(0, color=\".2\", linestyle=\"--\", zorder=1)\n",
         "\n",
-        "fig.align_ylabels([f_ax0_2, f_ax1_2, f_ax2_2, f_ax3_2])\n",
+        "ax2.plot(ht, orn_mu2, lw=2, label='mean population 1', color='blue')\n",
+        "ax2.fill_between(ht, orn_mu2 + orn_sigma2, orn_mu2 - orn_sigma2, facecolor='blue', alpha=0.5)\n",
+        "ax2.axhline(0, color=\".2\", linestyle=\"--\", zorder=1)\n",
         "\n",
-        "plt.show()"
+        "\n",
+        "ax3.plot(orn_exp_responses_mu)\n",
+        "ax3.plot(orn_predictions_mu)\n",
+        "\n",
+        "\n",
+        "\n",
+        "ax4.plot(kt, pn_mu, lw=2, label='mean population 1', color='blue')\n",
+        "ax4.fill_between(kt, pn_mu + pn_sigma, pn_mu - pn_sigma, facecolor='blue', alpha=0.5)\n",
+        "ax4.axhline(0, color=\".2\", linestyle=\"--\", zorder=1)\n",
+        "\n",
+        "ax5.plot(ht, pn_mu2, lw=2, label='mean population 1', color='blue')\n",
+        "ax5.fill_between(ht, pn_mu2 + pn_sigma2, pn_mu2 - pn_sigma2, facecolor='blue', alpha=0.5)\n",
+        "ax5.axhline(0, color=\".2\", linestyle=\"--\", zorder=1)\n",
+        "\n",
+        "ax6.plot(pn_exp_responses_mu)\n",
+        "ax6.plot(pn_predictions_mu)\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": [
